--- a/models/OliverData/_src_oliver.yml
+++ b/models/OliverData/_src_oliver.yml
@@ -3,6 +3,7 @@ version: 2
 sources:
   - name: oliver_landing
     database: RYANNKUNDA
+  #used ryan's datasource because mine wasn't working properly
     schema: oliver_dw_source
     tables:
       - name: customer
